readmeへのリンクをつけた

--- a/public/uropoke/index.html
+++ b/public/uropoke/index.html
@@ -17,6 +17,7 @@
     <div class="wrap">
         <div class="head">
             <h1>1日1種ポケモンをうろ覚えで描くページ</h1>
+            <a href="https://github.com/Yeshi/uropoke/blob/master/public/uropoke/readme.md" class="about-link" target="_blank">？</a>
         </div>
         <div id="result" class="contents">
             <ul class="img-list">
