--- a/public/uropoke/index.html
+++ b/public/uropoke/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 </head>
 <body>
     <div class="wrap">
@@ -21,10 +22,13 @@
         </div>
         <div id="result" class="contents">
             <ul class="img-list">
-                <li v-for="item in items">
+                <li v-for="(item, index) in items">
                     <div v-if="item.drawings[0]">
+                        <router-link to="/detail">
                         <img :src="'images/'+item.drawings[0].file" :alt="item.pokeName">
+                        </router-link>
                     </div>
+                    <div v-else><span class="none">{{ index + 1 }}</span></div>
                 </li>
             </ul>
         </div>
