--- a/public/uropoke/index.html
+++ b/public/uropoke/index.html
@@ -34,6 +34,10 @@
                   :src="'images/'+item.drawings[0].file"
                   :alt="item.pokeName"
                 />
+                <div class="status">
+                  <p class="pokeName">{{ index + 1 }}.{{item.pokeName}}</p>
+                  <p class="update">　{{item.drawings[0].date}}</p>
+                </div>
               </div>
               <div v-else>
                 <span class="none">{{ index + 1 }} : {{item.pokeName}}</span>
