--- a/public/uropoke/index.html
+++ b/public/uropoke/index.html
@@ -10,7 +10,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		 -->
     <!-- 本番バージョン、サイズと速度のために最適化されています -->
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://unpkg.com/vue@2.6.14/dist/vue.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="chance.min.js"></script>
   </head>
